@@ -1,25 +1,22 @@
 package org.violetmoon.zeta.advancement;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-
-import net.minecraft.advancements.AdvancementRequirements;
-import org.violetmoon.zeta.api.IMutableAdvancement;
-
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
-
 import net.minecraft.advancements.Advancement;
+import net.minecraft.advancements.AdvancementRequirements;
 import net.minecraft.advancements.Criterion;
+import org.violetmoon.zeta.api.IMutableAdvancement;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
 
 public class MutableAdvancement implements IMutableAdvancement {
 	
 	final Advancement advancement;
 	
-	public Map<String, Criterion> criteria;
+	public Map<String, Criterion<?>> criteria;
 	public List<List<String>> requirements;
 	
 	public MutableAdvancement(Advancement advancement) {
@@ -28,34 +25,33 @@ public class MutableAdvancement implements IMutableAdvancement {
 	}
 
 	@Override
-	public void addRequiredCriterion(String name, Criterion criterion) {
+	public void addRequiredCriterion(String name, Criterion<?> criterion) {
 		criteria.put(name, criterion);
 		requirements.add(Lists.newArrayList(name));
 	}
 
 	@Override
-	public void addOrCriterion(String name, Criterion criterion) {
+	public void addOrCriterion(String name, Criterion<?> criterion) {
 		criteria.put(name, criterion);
-		requirements.get(0).add(name);	
+		requirements.getFirst().add(name);
 	}
 
 	@Override
-	public Criterion getCriterion(String title) {
+	public Criterion<?> getCriterion(String title) {
 		return criteria.get(title);
 	}
 
 	private void mutabilize() {
 		this.criteria = Maps.newHashMap(advancement.criteria());
 		this.requirements = new ArrayList<>();
-
 		AdvancementRequirements advReq = advancement.requirements();
-		for (List<String> reqList : advReq.requirements()) {
-			this.requirements.add(reqList);
-		}
+        this.requirements.addAll(advReq.requirements());
 	}
 	
 	public void commit() {
-		advancement.criteria = ImmutableMap.copyOf(criteria); //todo: Mixin I believe would fix this
+		// advancement.criteria = ImmutableMap.copyOf(criteria); Replace entirely?
+		advancement.criteria().clear();
+		advancement.criteria().putAll(ImmutableMap.copyOf(criteria));
 		
 		List<String[]> requirementArrays = new ArrayList<>();
 		for(List<String> list : requirements) {
@@ -63,8 +59,8 @@ public class MutableAdvancement implements IMutableAdvancement {
 			requirementArrays.add(arr);
 		}
 
+		// Can't replace this yet
 		String[][] arr = requirementArrays.toArray(new String[0][requirementArrays.size()]);
 		advancement.requirements = arr;
 	}
-	
 }
